Fix for long bookmark titles cut off on Bookmarks page.
Words will be broken and wrapped if they don't fit horizontally
and ellipsis added if 2 lines are not enough.

BUG=170625


Review URL: https://chromiumcodereview.appspot.com/12131002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@180096 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 6fe9e1f04e1338c88ed438527258f6aa34de79aa

--- a/chrome/browser/resources/ntp_android/bookmarks.css
+++ b/chrome/browser/resources/ntp_android/bookmarks.css
@@ -115,11 +115,16 @@
 }
 
 .favicon-cell .title {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
   height: 30px;
   line-height: 18px;
   overflow: hidden;
   padding-bottom: 8px;
   padding-top: 10px;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
 }
 
 .favicon-icon {
